fix bugs related to create entities